RESOLVED FIXED241292
Force Repaint menu item does not repaint compositing layers, only tiles
https://bugs.webkit.org/show_bug.cgi?id=241292
Summary Force Repaint menu item does not repaint compositing layers, only tiles
Tim Horton
Reported 2022-06-03 16:55:36 PDT
Force Repaint menu item does not repaint compositing layers, only tiles
Attachments
Tim Horton
Comment 1 2022-06-03 17:02:20 PDT
EWS
Comment 2 2022-06-04 20:30:41 PDT
Committed r295269 (251315@main): <https://commits.webkit.org/251315@main> Reviewed commits have been landed. Closing PR #1301 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-06-04 20:31:14 PDT
Note You need to log in before you can comment on or make changes to this bug.