Force Repaint menu item does not repaint compositing layers, only tiles https://bugs.webkit.org/show_bug.cgi?id=241292

Reviewed by Simon Fraser.

* Source/WebCore/page/Page.h:
* Source/WebCore/page/Page.cpp:
(WebCore::Page::forceRepaintAllFrames):
Move forceRepaint to Page, and use `repaintViewAndCompositedLayers` instead of
`TiledBacking::forceRepaint`, so we hit all the compositing layers, not just the tiles.

* Source/WebCore/platform/graphics/TiledBacking.h:
* Source/WebCore/platform/graphics/ca/TileController.cpp:
(WebCore::TileController::forceRepaint): Deleted.
* Source/WebCore/platform/graphics/ca/TileController.h:
* Source/WebKit/WebProcess/WebPage/wc/GraphicsLayerWC.cpp:
Get rid of this unused method.

* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.mm:
(WebKit::RemoteLayerTreeDrawingArea::forceRepaint):
* Source/WebKit/WebProcess/WebPage/mac/TiledCoreAnimationDrawingArea.mm:
(WebKit::TiledCoreAnimationDrawingArea::forceRepaint):
Adopt `forceRepaintAllFrames`.

* LayoutTests/fast/images/async-image-multiple-clients-repaint-expected.txt:
* LayoutTests/platform/ios/fast/images/async-image-multiple-clients-repaint-expected.txt
* LayoutTests/platform/win/fast/images/async-image-multiple-clients-repaint-expected.txt
Rebaseline this test, except on Windows.

Canonical link: https://commits.webkit.org/251315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295269 268f45cc-cd09-0410-ab3c-d52691b4dbfc